--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <span>Sou Desenvolvedor Front-End</span>
                 </div>
                 <div class="info_downloads">
-                    <div class="btn_dow"><a href="#">Download CV</a></div>
+                    <div class="btn_dow"><a href="img/Currículo Profissional.pdf" target="_blank">Download CV</a></div>
                     <div class="btn_dow"><a href="#">Fale comigo</a></div>
                 </div>
             </div>
@@ -58,53 +58,36 @@
         <section>
             <div class="sobre">
                 <h2>Sobre mim</h2>
-                <p>Formado em análise e desenvolvimento de sistemas pela UCA Faculdade Católica Paulista / 2023, Sempre
-                    fui apaixonado por tecnologia, tive meu
-                    primeiro contato com programção em 2020 quando me surgiu uma idéia de desenvolver um site para criar
-                    conteúdo sobre o esporte da cidade onde moro, desde então me
-                    encantei com o mundo dos desenvolvedores, não parei mais de estudar e praticar, fiz faculdade e
-                    diversos cursos de web developer, me sinto preparado
-                    para trabalhar como Desenvolvedor Front-End e sigo focado nos estudos com o objetivo de me tornar um
-                    Desenvolvedor Full-Stack. </p>
+                <p>                   
+                    Sou um profissional apaixonado por tecnologias, com curso superior em Análise e Desenvolvimento de Sistemas, 
+                    Tenho um bom conhecimento em desenvolvimento web com diversos cursos na área, 
+                    Com um conhecimento mais avançado em front-end, estou em constante evolução para me tornar um desenvolvedor full stack.
+                </p>
             </div>
         </section>
         <section>
             <h2>Habilidades</h2>
             <div class="habilidades">
                 <a href="https://pt.wikipedia.org/wiki/HTML5" target="_blank"><img src="img/html.png.png"
-                        alt="HTML5"></a>
-                <a href="https://pt.wikipedia.org/wiki/CSS3" target="_blank"><img src="img/css.png.png" alt="CSS3"></a>
-                <a href="https://pt.wikipedia.org/wiki/JavaScript" target="_blank"><img src="img/js.png.png"
-                        alt="JS"></a>
-                <a href="https://pt.wikipedia.org/wiki/TypeScript" target="_blank"><img src="img/ts.png.png"
-                        alt="TS"></a>
-                <a href="https://pt.wikipedia.org/wiki/React_(JavaScript)" target="_blank"><img src="img/react.png.png"
-                        alt="React"></a>
-                <a href="https://pt.wikipedia.org/wiki/MySQL" target="_blank"><img src="img/mysql.png.png"
-                        alt="MYSQL"></a>
-                <a href="https://pt.wikipedia.org/wiki/GitHub" target="_blank"><img src="img/git.png.png"
-                        alt="GitHub"></a>
+                        alt="HTML5">
+                </a>
+                <a href="https://pt.wikipedia.org/wiki/CSS3" target="_blank"><img src="img/css.png.png" alt="CSS3">
+                </a>
+                <a href="https://pt.wikipedia.org/wiki/JavaScript" target="_blank"><img src="img/js.png.png" alt="JS">
+                </a>
+                <a href="https://pt.wikipedia.org/wiki/TypeScript" target="_blank"><img src="img/ts.png.png" alt="TS">
+                </a>
+                <a href="https://pt.wikipedia.org/wiki/React_(JavaScript)" target="_blank"><img src="img/react.png.png" alt="React">
+                </a>
+                <a href="https://pt.wikipedia.org/wiki/MySQL" target="_blank"><img src="img/mysql.png.png" alt="MYSQL">
+                </a>
+                <a href="https://pt.wikipedia.org/wiki/GitHub" target="_blank"><img src="img/git.png.png" alt="GitHub">
+                </a>
             </div>
         </section>
         <section>
-            <h2>Projetos</h2>
+            <h2>Alguns Projetos</h2>
             <div class="my_projects">
-                <div class="projects_links">
-                    <div class="project_name">
-                        <h3>To-Do List</h3>
-                        <div class="project_languagens">
-                            <i class="fa-brands fa-html5"></i>
-                            <i class="fa-brands fa-css3-alt"></i>
-                            <i class="fa-brands fa-js"></i>
-                        </div>
-                        <a href="https://romeryo92.github.io/Todo-avancado-js/" target="_blank">
-                            <button class="btn-projects">Ver mais</button>
-                        </a>
-                    </div>
-                    <div class="project_img">
-                        <img src="img/to-do.png.png" alt="To-do List">
-                    </div>
-                </div>
                 <div class="projects_links">
                     <div class="project_name">
                         <h3>Site CCEsporte</h3>
@@ -119,6 +102,38 @@
                     </div>
                     <div class="project_img">
                         <img src="img/ccesporte.png" alt="CCEsporte Site">
+                    </div>
+                </div>
+                <div class="projects_links">
+                    <div class="project_name">
+                        <h3>Tênis Shopping</h3>
+                        <div class="project_languagens">
+                            <i class="fa-brands fa-html5"></i>
+                            <i class="fa-brands fa-css3-alt"></i>
+                            <i class="fa-brands fa-js"></i>
+                        </div>
+                        <a href="https://romeryo92.github.io/T-nis-Shopping/" target="_blank">
+                            <button class="btn-projects">Ver mais</button>
+                        </a>
+                    </div>
+                    <div class="project_img">
+                        <img src="img/tenis.png.png" alt="Tênis Shopping">
+                    </div>
+                </div>
+                <div class="projects_links">
+                    <div class="project_name">
+                        <h3>To-Do List</h3>
+                        <div class="project_languagens">
+                            <i class="fa-brands fa-html5"></i>
+                            <i class="fa-brands fa-css3-alt"></i>
+                            <i class="fa-brands fa-js"></i>
+                        </div>
+                        <a href="https://romeryo92.github.io/Todo-avancado-js/" target="_blank">
+                            <button class="btn-projects">Ver mais</button>
+                        </a>
+                    </div>
+                    <div class="project_img">
+                        <img src="img/to-do.png.png" alt="To-do List">
                     </div>
                 </div>
                 <div class="projects_links">
@@ -141,6 +156,17 @@
         </section>
     </section>
     </div>
+    <div class="contatos_modal">
+        <div class="wats_modal">
+            <button id="btn_modal">X</button>
+            <h3>Contate-me</h3>
+            <p>Por favor, Clique no meu número para copiar, você pode falar comigo através do Whatsapp!</p>
+            <div class="copy_contato">
+                <p>(84) 996818451</p>
+                <i class="fa-solid fa-copy"></i>
+            </div>
+        </div>
+    </div>
     <footer>
         <div class="footer_links">
             <a href="#"><i class="fa-solid fa-envelope-open-text"></i></a>
@@ -155,8 +181,8 @@
                 <i class="fa-brands fa-github"></i>
             </a>
         </div>
-        <div class="footer_links">
-            <a href=""><i class="fa-brands fa-square-whatsapp"></i></a>
+        <div class="footer_links contatos_btn">
+            <i class="fa-brands fa-square-whatsapp"></i>
         </div>
     </footer>
 </body>
