--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </section>
     </section>
     </div>
-    <div class="contatos_modal">
+    <!-- <div class="contatos_modal">
         <div class="wats_modal">
             <button id="btn_modal">X</button>
             <h3>Contate-me</h3>
@@ -166,10 +166,10 @@
                 <i class="fa-solid fa-copy"></i>
             </div>
         </div>
-    </div>
+    </div> -->
     <footer>
         <div class="footer_links">
-            <a href="#"><i class="fa-solid fa-envelope-open-text"></i></a>
+            <i class="fa-solid fa-envelope-open-text"></i>
         </div>
         <div class="footer_links">
             <a href="https://www.linkedin.com/in/romeryo-lenilson-a35445270/" target="_blank">
